# gciPico

./: .gitignore  readme.md
cpp/: CMakeLists.txt
cpp/dev/: CMakeLists.txt  fixedpt.cpp
cpp/gtests/: CMakeLists.txt  main.cpp
cpp/src/: fastmath.hpp  string.hpp
docs/: pio.md  time.md
pico/: CMakeLists.txt  format-code.sh
pico/examples/: CMakeLists.txt  adc.cpp  fixpt.cpp  i2c.cpp  main.cpp  pwm.cpp  serial.cpp  udp.cpp
pico/src/: adc.hpp  fifo.hpp  i2c.hpp  mutex.hpp  picolib.hpp  pwm.hpp  rtc.hpp  spi.hpp  time.hpp  uart.hpp  udp.hpp  usb.hpp  watchdog.hpp
